--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "express-mesto-gha",
   "version": "1.0.0",
   "description": "[![Tests for sprint 13](https://github.com/ValerieOschatz/express-mesto-gha/actions/workflows/tests-13-sprint.yml/badge.svg)](https://github.com/ValerieOschatz/express-mesto-gha/actions/workflows/tests-13-sprint.yml)\r [![Tests for sprint 14](https://github.com/ValerieOschatz/express-mesto-gha/actions/workflows/tests-14-sprint.yml/badge.svg)](https://github.com/ValerieOschatz/express-mesto-gha/actions/workflows/tests-14-sprint.yml)\r # Проект Mesto фронтенд + бэкенд",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "lint": "npx eslint .",
     "dev": "nodemon app.js",
@@ -13,7 +13,7 @@
     "url": "git+https://github.com/ValerieOschatz/express-mesto-gha.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "ValerieOschatz",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/ValerieOschatz/express-mesto-gha/issues"
